--- a/index.html
+++ b/index.html
@@ -1,8 +1,35 @@
 <!DOCTYPE html>
 <html>
+<style>
+#title{
+	font-size: 50px;
+	width: 800px;
+	margin:auto;
+}
+#table{
+    text-align:center;
+	width:800px;
+	margin:auto;
+	border-style:double;
+}
+body{
+    background:#c0c0c0
+}
+</style>
 <body> 
-<h1>My example </h1>
+<h1 id="title"style="text-align:center;">計算機圖學作業</h1>
 <hr>
-1. <a href="hw0.html">hw0</a><br>
+<table id="table" cellpadding="8" border="1";>
+<tr>
+    <td><h1>作業1</h1></td>
+	<td><h1>作業2</h1></td>
+	<td><h1>作業3</h1></td>
+</tr>
+<tr>	
+    <td> <a href="hw0.html"><img src="123.png"height="80" width="80"></a></td>
+    <td><h1>準備中</h1></td>
+	<td><h1>準備中</h1></td>
+</tr>	
 </body>
+</table>
 </html>
