--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ body{
 <h1 id="title"style="text-align:center;">計算機圖學作業</h1>
 <hr>
 <table id="table" cellpadding="8" border="1";>
+<h1 style="text-align:center;">I3A22 簡廷翰</h1>
 <tr>
     <td><h1>作業1</h1></td>
 	<td><h1>作業2</h1></td>
