--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body{
 <hr>
 <table id="table" cellpadding="8" border="1";>
 <h1 style="text-align:center;">I3A22 簡廷翰</h1>
+<h1 style="text-align:center;">Email:jthscat987654@gmail.com</h1>
 <tr>
     <td><h1>作業1</h1></td>
 	<td><h1>作業2</h1></td>
