--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@ body{
 <h1 style="text-align:center;">I3A22 簡廷翰</h1>
 <h1 style="text-align:center;"><a href="mailto:jthscat987654@gmail">email:jthscat987654@gmail.com</a></h1>
 <tr>
-    <td><h1>作業1</h1></td>
+    <td><h1>作業0</h1></td>
+	<td><h1>作業1</h1></td>
 	<td><h1>作業2</h1></td>
-	<td><h1>作業3</h1></td>
 </tr>
 <tr>	
     <td> <a href="hw0.html"><img src="123.png"height="80" width="80"></a></td>
-    <td><h1>準備中</h1></td>
+    <td> <a href="hw1.html">1</a></td>
 	<td><h1>準備中</h1></td>
 </tr>	
 </body>
