--- a/hw1.html
+++ b/hw1.html
@@ -22,7 +22,7 @@
 <body> 
 
 <audio id="soundtrack" autoplay loop style="display:none">
-<source src="ring.mp3"  type='audio/mp3'>
+<source src="史丹利.mp3"  type='audio/mp3'>
 </audio>
 
 <div id='info'> HW1 timed-based animation <br> 
