--- a/hw1.html
+++ b/hw1.html
@@ -22,15 +22,14 @@
 <body> 
 
 <audio id="soundtrack" autoplay loop style="display:none">
-<source src="史丹利.mp3"  type='audio/mp3'>
+<source src="ring.mp3"  type='audio/mp3'>
 </audio>
 
 <div id='info'> HW1 timed-based animation <br> 
 <button id="toggle" style="width:20%">Toggle</button>
-<button id="switch" style="width:20%">Switch mode</button>
+<button id="switch" style="width:20%;margin-left:40px;">Switch mode</button>
 <br>
 <button id="time" style="width:5%">+10</button>
-<button id="time2" style="width:5%">+1</button>
 </div>
 <script src="https://threejs.org/build/three.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -47,6 +46,7 @@ var pressed={};
 var soundTrack;
 var a;
 var begin=true;
+var temp=0;
 
 $('#toggle').mousedown(function(e){
      if ( pressed[e.which] ) return;
@@ -60,6 +60,7 @@ $('#toggle').mouseup(function(e){
      if(duration>1)
      {
      angle=0;
+	 temp=0;
      }
      else
      {
@@ -76,25 +77,32 @@ $('#switch').click(function(){
      if(mode1)
      {
      $("#switch").text('continuous');
+	 turn=false;
+	 $("#toggle").text('turn');
      mode1=false;
      mode2=true;
+	 
      }
      else
      {
-     $("#switch").text('SixDegs');
+     $("#switch").text('quartz');
+	 turn=false;
+	 $("#toggle").text('turn');
      mode1=true;
      mode2=false;
      }
      angle =0;
+	 temp=0;
 });
 
 $('#time').click(function(){
+     if(temp!=6)
+	 {
      angle += 2*Math.PI/6;
+	 temp+=1;
+	 }
 });
 
-$('#time2').click(function(){
-     angle += 2*Math.PI/60;
-});
 
 init();
 animate();
@@ -107,22 +115,22 @@ function init() {
   });
 
   renderer.setSize(window.innerWidth, window.innerHeight);
-  renderer.setClearColor(0x888888);
+  renderer.setClearColor(0xBEBEBE);
   document.body.appendChild(renderer.domElement);
 
   scene = new THREE.Scene();
   camera = new THREE.PerspectiveCamera(40,window.innerWidth/window.innerHeight,1,1000 );
   camera.position.z = 35;
 var circlegeometry = new THREE.CircleGeometry( 10, 32 );
-var circlematerial = new THREE.MeshBasicMaterial( { color: 0xFFFFFF} );
+var circlematerial = new THREE.MeshBasicMaterial( { color: 0x000000} );
 var circle = new THREE.Mesh( circlegeometry, circlematerial );
 scene.add( circle );
 
-var geometry2 = new THREE.CircleGeometry( 1, 32 );
-var material2 = new THREE.MeshBasicMaterial( { color: 0xFF50000} );
+var geometry2 = new THREE.CircleGeometry( 3.3, 32 );
+var material2 = new THREE.MeshBasicMaterial( { color: 0xFF8000} );
 var circle2 = new THREE.Mesh( geometry2, material2 );
-var geometry = new THREE.BoxGeometry( 1, 7,0 );
-var material = new THREE.MeshBasicMaterial( {color: 0x000000} );
+var geometry = new THREE.BoxGeometry( 0.5, 8,0 );
+var material = new THREE.MeshBasicMaterial( {color: 0xFFFFFF} );
 var cube = new THREE.Mesh( geometry, material );
 cube.position.y=4.3;
 
@@ -172,11 +180,12 @@ function animate() {
     turn=!turn;
 	$("#toggle").text('turn');
     angle=0;
+	temp=0;
 	soundTrack.play();
     a=setTimeout(stop,10000);
   }
    
-  group.position.set(0.3*Math.sin(angle),0.3*Math.cos(angle),0);
+  group.position.set(0.15*Math.sin(angle),0.15*Math.cos(angle),0);
   group.rotation.z=-angle;
   requestAnimationFrame(animate);
   render();
