--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body{
 </tr>
 <tr>	
     <td> <a href="hw0.html"><img src="123.png"height="80" width="80"></a></td>
-    <td> <a href="hw1.html">1</a></td>
+    <td> <a href="hw1.html"><img src="hw1.gif"height="200" width="200"></a></td>
 	<td><h1>準備中</h1></td>
 </tr>	
 </body>
