--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@ body{
     <td> <a href="hw0.html"><img src="123.png"height="80" width="80"></a></td>
     <td> <a href="hw1.html"><img src="hw1.gif"height="200" width="200"></a></td>
 	<td> <a href="hw2.html"><img src="hw2.gif"height="200" width="200"></a></td>
+</tr>
+<tr>
+    <td><h1>作業3</h1></td>
+</tr>
+<tr>	
+	<td> <a href="hw3.html"><img src="hw3.gif"height="200" width="200"></a></td>
 </tr>	
 </body>
 </table>
