--- a/hw2.html
+++ b/hw2.html
@@ -29,10 +29,7 @@ body {
 </script>
 <script src="https://jyunming-chen.github.io/tutsplus/js/KeyboardState.js"></script>
 
-<script type="module">
-import * as THREE from "https://threejs.org/build/three.module.js";
-import {makeRect} from "./hw2-2.js";
-
+<script>
 var camera, scene, renderer;
 var keyboard = new KeyboardState();
 var clock;
@@ -302,6 +299,7 @@ function animate() {
 
 
 
+
 function Check_Intersect(Rect, C, Rad) {
   const Rad2 = Rad * Rad;
 
@@ -345,6 +343,14 @@ function Check_Intersect(Rect, C, Rad) {
     return (R.min.z < Rad);
   else /* R contains circle centerpoint */
     return (true);
+}
+
+function makeRect(rect) {
+  let Rect = {};
+  Rect.max = car.localToWorld(new THREE.Vector3(4.5, 0, 2));
+  Rect.min = car.localToWorld(new THREE.Vector3(-4.5, 0, -2));
+  Rect.px = car.localToWorld(new THREE.Vector3(1, 0, 0)).sub(car.position);
+  return Rect;
 }
 
 function render() {
