--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@ body{
 </tr>
 <tr>
     <td><h1>作業3</h1></td>
+	<td><h1>作業4(缺模組化)</h1></td>
 </tr>
 <tr>	
 	<td> <a href="hw3.html"><img src="hw3.gif"height="200" width="200"></a></td>
+	<td> <a href="HW4.html"><img src="HW4.gif"height="200" width="200"></a></td>
 </tr>	
 </body>
 </table>
