--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body{
 </tr>
 <tr>	
 	<td> <a href="hw3.html"><img src="hw3.gif"height="200" width="200"></a></td>
-	<td> <a href="HW4.html"><img src="HW4.gif"height="200" width="200"></a></td>
+	<td> <a href="./hw4/HW4.html"><img src="./hw4/HW4.gif"height="200" width="200"></a></td>
 </tr>	
 </body>
 </table>
