--- a/hw4/HW4.html
+++ b/hw4/HW4.html
@@ -25,11 +25,10 @@ body {
 <div id="info">Candle Light Animation
   <br>
 </div>
-<script src="https://threejs.org/build/three.min.js"></script>
-<script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script type= "module">
-import{ init,animate} from "./main,js";
+import{init,animate} from "./main.js";
 
 init();
 animate();
