--- a/index.html
+++ b/index.html
@@ -35,12 +35,18 @@ body{
 <tr>
     <td><h1>作業3</h1></td>
 	<td><h1>作業4</h1></td>
-	<td><h1>作業5(缺v2)</h1></td>
+	<td><h1>作業5v1</h1></td>
 </tr>
 <tr>	
 	<td> <a href="hw3.html"><img src="hw3.gif"height="200" width="200"></a></td>
 	<td> <a href="./hw4/HW4.html"><img src="./hw4/HW4.gif"height="200" width="200"></a></td>
 	<td> <a href="./hw5/HW5.html"><img src="./hw5/HW5.gif"height="200" width="200"></a></td>
+</tr>	
+<tr>
+    <td><h1>作業5v2</h1></td>
+</tr>
+<tr>	
+	<td> <a href="./hw5/HW5v2.html"><img src="./hw5/HW5.gif"height="200" width="200"></a></td>	
 </tr>	
 </body>
 </table>
