--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body{
     <td><h1>作業5v2</h1></td>
 </tr>
 <tr>	
-	<td> <a href="./hw5/HW5v2.html"><img src="./hw5/HW5v2.gif"height="200" width="200"></a></td>	
+	<td> <a href="./hw5/HW5v2.html"><img src="./hw5/HW5V2.gif"height="200" width="200"></a></td>	
 </tr>	
 </body>
 </table>
